src/coolParser.java
// Generated from cool.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class coolParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8,
            T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16,
            T__2=17, T__1=18, T__0=19, IF=20, FI=21, CLASS=22, ELSE=23, IN=24, INHERITS=25,
            ISVOID=26, LET=27, LOOP=28, POOL=29, THEN=30, WHILE=31, CASE=32, ESAC=33,
            NEW=34, OF=35, NOT=36, TRUE=37, FALSE=38, INTEGER=39, TYPE=40, OBJECT=41,
            SELF=42, SELF_TYPE=43, STRING=44, SINGLE_COMMENT=45, MULTI_COMMENT=46,
            WS=47;
    public static final String[] tokenNames = {
            "<INVALID>", "')'", "'.'", "'=>'", "','", "'+'", "'-'", "'*'", "':'",
            "'('", "'@'", "'<'", "'='", "';'", "'<='", "'{'", "'/'", "'~'", "'}'",
            "'<-'", "IF", "FI", "CLASS", "ELSE", "IN", "INHERITS", "ISVOID", "LET",
            "LOOP", "POOL", "THEN", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", "TRUE",
            "FALSE", "INTEGER", "TYPE", "OBJECT", "'self'", "'SELF_TYPE'", "STRING",
            "SINGLE_COMMENT", "MULTI_COMMENT", "WS"
    };
    public static final int
            RULE_cool = 0, RULE_program = 1, RULE_clas = 2, RULE_feature = 3, RULE_formal = 4,
            RULE_expr = 5, RULE_not = 6, RULE_comp = 7, RULE_comp2 = 8, RULE_addsub = 9,
            RULE_addsub2 = 10, RULE_muldiv = 11, RULE_muldiv2 = 12, RULE_voidd = 13,
            RULE_target = 14, RULE_call = 15, RULE_call2 = 16, RULE_func = 17, RULE_end = 18;
    public static final String[] ruleNames = {
            "cool", "program", "clas", "feature", "formal", "expr", "not", "comp",
            "comp2", "addsub", "addsub2", "muldiv", "muldiv2", "voidd", "target",
            "call", "call2", "func", "end"
    };

    //User Defined fields here:
    InheritanceGraph typesGraph;

    @Override
    public String getGrammarFileName() { return "cool.g4"; }

    @Override
    public String[] getTokenNames() { return tokenNames; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public coolParser(TokenStream input, InheritanceGraph typesGraph) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
        this.typesGraph = typesGraph;
    }
    public static class CoolContext extends ParserRuleContext {
        public ProgramContext program() {
            return getRuleContext(ProgramContext.class,0);
        }
        public CoolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_cool; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterCool(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitCool(this);
        }
    }

    public final CoolContext cool() throws RecognitionException {
        CoolContext _localctx = new CoolContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_cool);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(38); program();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProgramContext extends ParserRuleContext {
        public ClasContext clas(int i) {
            return getRuleContext(ClasContext.class,i);
        }
        public List<ClasContext> clas() {
            return getRuleContexts(ClasContext.class);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_program; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterProgram(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitProgram(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                System.out.println("1");
                setState(44);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(41); clas();
                            setState(42); match(T__6);
                        }
                    }
                    setState(46);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ( _la==CLASS );
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ClasContext extends ParserRuleContext {
        public List<FeatureContext> feature() {
            return getRuleContexts(FeatureContext.class);
        }
        public FeatureContext feature(int i) {
            return getRuleContext(FeatureContext.class,i);
        }
        public TerminalNode INHERITS() { return getToken(coolParser.INHERITS, 0); }
        public TerminalNode TYPE(int i) {
            return getToken(coolParser.TYPE, i);
        }
        public List<TerminalNode> TYPE() { return getTokens(coolParser.TYPE); }
        public TerminalNode CLASS() { return getToken(coolParser.CLASS, 0); }
        public ClasContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_clas; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterClas(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitClas(this);
        }
    }

    public final ClasContext clas() throws RecognitionException {
        ClasContext _localctx = new ClasContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_clas);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                //System.out.println("2");
                setState(49); match(CLASS);
                String typeName = getCurrentToken().getText();
                String fatherName = "Object";
                System.out.print("class is: " + getCurrentToken().getText());
                setState(50); match(TYPE);
                setState(53);
                _la = _input.LA(1);
                if (_la==INHERITS) {
                    {
                        setState(51); match(INHERITS);
                        fatherName = getCurrentToken().getText();
                        System.out.println(" father is: "+getCurrentToken().getText());
                        setState(52); match(TYPE);
                    }
                }
                else{

                    System.out.println(" and there is no father!");
                }

                setState(55); match(T__4);
                setState(61);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==OBJECT) {
                    {
                        {
                            setState(56); feature();
                            setState(57); match(T__6);
                        }
                    }
                    setState(63);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(64); match(T__1);
                typesGraph.AddNode(typeName, fatherName);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FeatureContext extends ParserRuleContext {
        public TerminalNode OBJECT() { return getToken(coolParser.OBJECT, 0); }
        public FormalContext formal(int i) {
            return getRuleContext(FormalContext.class,i);
        }
        public List<FormalContext> formal() {
            return getRuleContexts(FormalContext.class);
        }
        public ExprContext expr() {
            return getRuleContext(ExprContext.class,0);
        }
        public TerminalNode TYPE() { return getToken(coolParser.TYPE, 0); }
        public FeatureContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_feature; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterFeature(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitFeature(this);
        }
    }

    public final FeatureContext feature() throws RecognitionException {
        FeatureContext _localctx = new FeatureContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_feature);
        int _la;
        try {
            setState(94);
            switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("3");
                    {
                        setState(67); match(OBJECT);
                        setState(68); match(T__10);
                        setState(77);
                        _la = _input.LA(1);
                        if (_la==OBJECT) {
                            {
                                setState(69); formal();
                                setState(74);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la==T__15) {
                                    {
                                        {
                                            setState(70); match(T__15);
                                            setState(71); formal();
                                        }
                                    }
                                    setState(76);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                        setState(79); match(T__18);
                        setState(80); match(T__11);
                        setState(81); match(TYPE);
                        setState(82); match(T__4);
                        setState(83); expr();
                        setState(84); match(T__1);
                    }
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    System.out.println("4");
                    {
                        setState(87); match(OBJECT);
                        setState(88); match(T__11);
                        setState(89); match(TYPE);
                        setState(92);
                        _la = _input.LA(1);
                        if (_la==T__0) {
                            {
                                setState(90); match(T__0);
                                setState(91); expr();
                            }
                        }

                    }
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FormalContext extends ParserRuleContext {
        public TerminalNode OBJECT() { return getToken(coolParser.OBJECT, 0); }
        public TerminalNode TYPE() { return getToken(coolParser.TYPE, 0); }
        public FormalContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_formal; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterFormal(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitFormal(this);
        }
    }

    public final FormalContext formal() throws RecognitionException {
        FormalContext _localctx = new FormalContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_formal);
        try {
            enterOuterAlt(_localctx, 1);
            {
                System.out.println("5");
                setState(97); match(OBJECT);
                setState(98); match(T__11);
                setState(99); match(TYPE);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public TerminalNode OBJECT() { return getToken(coolParser.OBJECT, 0); }
        public ExprContext expr() {
            return getRuleContext(ExprContext.class,0);
        }
        public NotContext not() {
            return getRuleContext(NotContext.class,0);
        }
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_expr; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterExpr(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitExpr(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_expr);
        try {
            setState(106);
            switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("6");
                    setState(102); match(OBJECT);
                    setState(103); match(T__0);
                    setState(104); expr();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(105); not();
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NotContext extends ParserRuleContext {
        public CompContext comp() {
            return getRuleContext(CompContext.class,0);
        }
        public TerminalNode NOT() { return getToken(coolParser.NOT, 0); }
        public NotContext not() {
            return getRuleContext(NotContext.class,0);
        }
        public NotContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_not; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterNot(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitNot(this);
        }
    }

    public final NotContext not() throws RecognitionException {
        NotContext _localctx = new NotContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_not);
        try {
            setState(112);
            switch (_input.LA(1)) {
                case NOT:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("24");
                    setState(109); match(NOT);
                    setState(110); not();
                }
                break;
                case T__10:
                case T__4:
                case T__2:
                case IF:
                case ISVOID:
                case LET:
                case WHILE:
                case CASE:
                case NEW:
                case TRUE:
                case FALSE:
                case INTEGER:
                case OBJECT:
                case STRING:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(111); comp();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CompContext extends ParserRuleContext {
        public AddsubContext addsub() {
            return getRuleContext(AddsubContext.class,0);
        }
        public Comp2Context comp2() {
            return getRuleContext(Comp2Context.class,0);
        }
        public CompContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_comp; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterComp(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitComp(this);
        }
    }

    public final CompContext comp() throws RecognitionException {
        CompContext _localctx = new CompContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_comp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(114); addsub();
                setState(115); comp2();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Comp2Context extends ParserRuleContext {
        public AddsubContext addsub() {
            return getRuleContext(AddsubContext.class,0);
        }
        public Comp2Context comp2() {
            return getRuleContext(Comp2Context.class,0);
        }
        public Comp2Context(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_comp2; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterComp2(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitComp2(this);
        }
    }

    public final Comp2Context comp2() throws RecognitionException {
        Comp2Context _localctx = new Comp2Context(_ctx, getState());
        enterRule(_localctx, 16, RULE_comp2);
        try {
            setState(133);
            switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("21");
                    setState(118); match(T__8);
                    setState(119); addsub();
                    setState(120); comp2();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    System.out.println("22");
                    setState(123); match(T__5);
                    setState(124); addsub();
                    setState(125); comp2();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    System.out.println("23");
                    setState(128); match(T__7);
                    setState(129); addsub();
                    setState(130); comp2();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AddsubContext extends ParserRuleContext {
        public MuldivContext muldiv() {
            return getRuleContext(MuldivContext.class,0);
        }
        public Addsub2Context addsub2() {
            return getRuleContext(Addsub2Context.class,0);
        }
        public AddsubContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_addsub; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterAddsub(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitAddsub(this);
        }
    }

    public final AddsubContext addsub() throws RecognitionException {
        AddsubContext _localctx = new AddsubContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_addsub);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135); muldiv();
                setState(136); addsub2();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Addsub2Context extends ParserRuleContext {
        public MuldivContext muldiv() {
            return getRuleContext(MuldivContext.class,0);
        }
        public Addsub2Context addsub2() {
            return getRuleContext(Addsub2Context.class,0);
        }
        public Addsub2Context(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_addsub2; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterAddsub2(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitAddsub2(this);
        }
    }

    public final Addsub2Context addsub2() throws RecognitionException {
        Addsub2Context _localctx = new Addsub2Context(_ctx, getState());
        enterRule(_localctx, 20, RULE_addsub2);
        try {
            setState(149);
            switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("16");
                    setState(139); match(T__14);
                    setState(140); muldiv();
                    setState(141); addsub2();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    System.out.println("17");
                    setState(144); match(T__13);
                    setState(145); muldiv();
                    setState(146); addsub2();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MuldivContext extends ParserRuleContext {
        public VoiddContext voidd() {
            return getRuleContext(VoiddContext.class,0);
        }
        public Muldiv2Context muldiv2() {
            return getRuleContext(Muldiv2Context.class,0);
        }
        public MuldivContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_muldiv; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterMuldiv(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitMuldiv(this);
        }
    }

    public final MuldivContext muldiv() throws RecognitionException {
        MuldivContext _localctx = new MuldivContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_muldiv);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(151); voidd();
                setState(152); muldiv2();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Muldiv2Context extends ParserRuleContext {
        public VoiddContext voidd() {
            return getRuleContext(VoiddContext.class,0);
        }
        public Muldiv2Context muldiv2() {
            return getRuleContext(Muldiv2Context.class,0);
        }
        public Muldiv2Context(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_muldiv2; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterMuldiv2(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitMuldiv2(this);
        }
    }

    public final Muldiv2Context muldiv2() throws RecognitionException {
        Muldiv2Context _localctx = new Muldiv2Context(_ctx, getState());
        enterRule(_localctx, 24, RULE_muldiv2);
        try {
            setState(165);
            switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("18");
                    setState(155); match(T__12);
                    setState(156); voidd();
                    setState(157); muldiv2();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    System.out.println("19");
                    setState(160); match(T__3);
                    setState(161); voidd();
                    setState(162); muldiv2();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VoiddContext extends ParserRuleContext {
        public TerminalNode ISVOID() { return getToken(coolParser.ISVOID, 0); }
        public TargetContext target() {
            return getRuleContext(TargetContext.class,0);
        }
        public VoiddContext voidd() {
            return getRuleContext(VoiddContext.class,0);
        }
        public VoiddContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_voidd; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterVoidd(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitVoidd(this);
        }
    }

    public final VoiddContext voidd() throws RecognitionException {
        VoiddContext _localctx = new VoiddContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_voidd);
        try {
            setState(171);
            switch (_input.LA(1)) {
                case ISVOID:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("15");
                    setState(168); match(ISVOID);
                    setState(169); voidd();
                }
                break;
                case T__10:
                case T__4:
                case T__2:
                case IF:
                case LET:
                case WHILE:
                case CASE:
                case NEW:
                case TRUE:
                case FALSE:
                case INTEGER:
                case OBJECT:
                case STRING:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(170); target();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TargetContext extends ParserRuleContext {
        public TargetContext target() {
            return getRuleContext(TargetContext.class,0);
        }
        public CallContext call() {
            return getRuleContext(CallContext.class,0);
        }
        public TargetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_target; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterTarget(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitTarget(this);
        }
    }

    public final TargetContext target() throws RecognitionException {
        TargetContext _localctx = new TargetContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_target);
        try {
            setState(177);
            switch (_input.LA(1)) {
                case T__2:
                    enterOuterAlt(_localctx, 1);
                {
                    System.out.println("20");
                    setState(174); match(T__2);
                    setState(175); target();
                }
                break;
                case T__10:
                case T__4:
                case IF:
                case LET:
                case WHILE:
                case CASE:
                case NEW:
                case TRUE:
                case FALSE:
                case INTEGER:
                case OBJECT:
                case STRING:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(176); call();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CallContext extends ParserRuleContext {
        public Call2Context call2() {
            return getRuleContext(Call2Context.class,0);
        }
        public FuncContext func() {
            return getRuleContext(FuncContext.class,0);
        }
        public CallContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_call; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterCall(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitCall(this);
        }
    }

    public final CallContext call() throws RecognitionException {
        CallContext _localctx = new CallContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_call);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(179); func();
                setState(180); call2();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Call2Context extends ParserRuleContext {
        public TerminalNode OBJECT() { return getToken(coolParser.OBJECT, 0); }
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }
        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class,i);
        }
        public Call2Context call2() {
            return getRuleContext(Call2Context.class,0);
        }
        public TerminalNode TYPE() { return getToken(coolParser.TYPE, 0); }
        public Call2Context(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_call2; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).enterCall2(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof coolListener ) ((coolListener)listener).exitCall2(this);
        }
    }
